# kicad-mil-ipc7351-footprint-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
.opencode/: agentry.md
ipc_data/: formulas.yaml
ipc_data/tables/: chip_sizes.yaml  density_factors.yaml
src/kicad_mil_fpgen/: __init__.py  __main__.py
src/kicad_mil_fpgen/config/: __init__.py  defaults.yaml  manager.py
src/kicad_mil_fpgen/core/: __init__.py  calculator.py  constants.py  families.py  ipc7351.py  naming.py  padstack.py  registry.py  tolerances.py  validation.py
src/kicad_mil_fpgen/core/families/: __init__.py  base.py  bga.py  chip.py  gullwing.py  tht.py
src/kicad_mil_fpgen/export/: __init__.py  batch_import.py  kicad_mod.py  report.py
src/kicad_mil_fpgen/gui/: __init__.py  main_window.py  preview.py  wizard.py
src/kicad_mil_fpgen/models/: __init__.py  component.py  package.py
templates/: default_profile.yaml  mil_grade_A.yaml
tests/: conftest.py  test_batch.py  test_calculator.py  test_cli.py  test_compliance.py  test_config.py  test_export.py  test_families.py  test_hypothesis.py  test_ipc7351.py  test_new_features.py  test_padstack.py  test_registry.py  test_tolerances.py
