[project]
name = "kicad-mil-ipc7351-footprint-generator"
version = "0.1.0"
description = "CLI tool to generate IPC-7351C MIL-grade KiCad footprints — the free alternative to PCB Library Expert"
authors = [
    { name = "KiCad MIL IPC7351 Contributors" },
]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "PyYAML>=6.0",
]

[project.scripts]
kicad-mil-fpgen = "kicad_mil_fpgen.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "black>=24.0",
]
excel = [
    "pandas>=2.2",
]
report = [
    "reportlab>=4.2",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
